# living-graph

./: .env.example  .gitignore  pyproject.toml
docs/plans/: 2026-02-24-phase2-deterministic-layer.md
scripts/: com.weytani.living-graph.plist.template
src/living_graph/: __init__.py  __main__.py  client.py  clustering.py  context.py  curator.py  distiller.py  embeddings.py  entity_resolution.py  interlinking.py  janitor.py  llm.py  mutation_log.py  ontology.py  orchestrator.py  scope.py  surveyor.py  validation.py  vector_store.py
tests/: conftest.py  test_cli.py  test_client.py  test_clustering.py  test_context.py  test_curator.py  test_curator_e2e.py  test_distiller.py  test_distiller_e2e.py  test_embeddings.py  test_entity_resolution.py  test_integration.py  test_interlinking.py  test_janitor.py  test_llm.py  test_mutation_log.py  test_ontology.py  test_orchestrator.py  test_scope.py  test_surveyor.py  test_surveyor_e2e.py  test_validation.py  test_vector_store.py
