[project]
name = "living-graph"
version = "0.1.0"
description = "Deterministic layer for Roam living graph maintenance"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31",
    "anthropic>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-dotenv>=1.0",
]
surveyor = [
    "pymilvus>=2.4",
    "httpx>=0.27",
    "hdbscan>=0.8.38",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
